MCAPackagingOrg/src/objects/Rate_Tier__c.object
<CustomObject>
    <description>The Commission Rate Tiers store the properties of a Bank Program&apos;s compensation schedule. For referencing only.</description>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <description>The Buy Rate that is being sold for the Program, if applicable.</description>
        <label>Buy Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Commission_New_Deal__c</fullName>
        <label>Max Commission - New Deal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Commission_Renewal__c</fullName>
        <label>Max Commission - Renewal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Factor_Rate__c</fullName>
        <label>Max Factor Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Factor_Rate__c</fullName>
        <description>The Minimum Factor Rate for the corresponding Buy Rate and Commission %.</description>
        <label>Min Factor Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The Program to which this Commission Rate Tier is related.</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Commission Rate Tiers</relationshipLabel>
        <relationshipName>Commission_Rate_Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <description>The number of months for the Commission Rate Tier, if applicable. Some Commission Rate Tiers are independent of months.</description>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Commission Rate Tier</label>
    <nameField>
        <displayFormat>CRT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Rate Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>